--- a/macheart.conf
+++ b/macheart.conf
@@ -1,13 +1,18 @@
 CPUs = 4
 
+#########################################
+# Local RPC configure
+#########################################
+RpcNetwork = tcp4
+RpcPort = 41494
 
 #########################################
-# Listener configure
+# Server Listener configure
 #########################################
 # There must be tcp, tcp4 or tcp6
-ProtocolType = tcp4
+ServerNetwork = tcp4
 # specify listen address
-ListenAddr = 127.0.0.1:12312
+ServerListenAddress = 127.0.0.1:12312
 
 ##########################################
 # Logger configure
